# OceanAudio

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FetchJUCE.cmake  FetchVST3SDK.cmake
docs/: architecture.md  build_windows.md  driver_setup.md
driver/: CMakeLists.txt
driver/service/: CMakeLists.txt
driver/service/src/: BridgeConsumer.cpp  BridgeConsumer.h  ServiceMain.cpp
driver/sys/: OceanAudioVirtualMic.inf  README.md
driver/sys/include/: OceanAudioVirtualMic.h
driver/sys/src/: OceanAudioVirtualMic.cpp
host/: CMakeLists.txt
host/resources/presets/: FactoryPresets.json
host/src/: Application.cpp  Application.h  AudioEngine.cpp  AudioEngine.h  BridgeClient.cpp  BridgeClient.h  Main.cpp  MainWindow.cpp  MainWindow.h  PluginChain.cpp  PluginChain.h  PluginChainComponent.cpp  PluginChainComponent.h  PluginListComponent.cpp  PluginListComponent.h  PluginManager.cpp  PluginManager.h  PresetManager.cpp  PresetManager.h
plugins/: CMakeLists.txt
plugins/CoreCompressor/: CMakeLists.txt
plugins/CoreCompressor/src/: CoreCompressorEditor.cpp  CoreCompressorEditor.h  CoreCompressorProcessor.cpp  CoreCompressorProcessor.h
plugins/CoreEQ/: CMakeLists.txt
plugins/CoreEQ/src/: CoreEQEditor.cpp  CoreEQEditor.h  CoreEQProcessor.cpp  CoreEQProcessor.h
plugins/CoreGate/: CMakeLists.txt
plugins/CoreGate/src/: CoreGateEditor.cpp  CoreGateEditor.h  CoreGateProcessor.cpp  CoreGateProcessor.h
shared/include/OceanAudio/: BridgeProtocol.h  BridgeSharedMemory.h
